[ZEPPELIN-3092] Add remote Github repository synchronzing
- Pull the latest changes when the notebook page loads in the browser
- After commiting the changes, pull the latest changes from the remote repo then push the latest changes to the remote repo

--- a/zeppelin-zengine/pom.xml
+++ b/zeppelin-zengine/pom.xml
@@ -625,6 +625,11 @@
         </exclusion>
       </exclusions>
     </dependency>
+      <dependency>
+          <groupId>org.eclipse.jgit</groupId>
+          <artifactId>org.eclipse.jgit</artifactId>
+          <version>4.3.1.201605051710-r</version>
+      </dependency>
   </dependencies>
 
   <build>
