--- a/conf/zeppelin-site.xml.template
+++ b/conf/zeppelin-site.xml.template
@@ -501,7 +501,7 @@
 </property>
 
 <property>
-  <name>zeppelin.notebook.git.remote.remote</name>
+  <name>zeppelin.notebook.git.remote.origin</name>
   <value>origin</value>
   <description>Git repository remote</description>
 </property>
