--- a/zeppelin-zengine/pom.xml
+++ b/zeppelin-zengine/pom.xml
@@ -628,7 +628,7 @@
     <dependency>
         <groupId>org.eclipse.jgit</groupId>
         <artifactId>org.eclipse.jgit</artifactId>
-        <version>4.3.1.201605051710-r</version>
+        <version>${eclipse.jgit.version}</version>
     </dependency>
   </dependencies>
 
