--- a/conf/zeppelin-site.xml.template
+++ b/conf/zeppelin-site.xml.template
@@ -413,7 +413,7 @@
 <property>
   <name>zeppelin.username.force.lowercase</name>
   <value>false</value>
-  <description>Force convert username case to lower case, useful for Active Directory. Default is not to change case</description>
+  <description>Force convert username case to lower case, useful for Active Directory/LDAP. Default is not to change case</description>
 </property>
 
 <property>
