--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -100,7 +100,7 @@
         <dependency>
           <groupId>xerces</groupId>
           <artifactId>xercesImpl</artifactId>
-          <version>2.11.0</version>
+          <version>2.11.0.SP5</version>
         </dependency>
       </dependencies>
     </profile>
